--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "~1.0.1",
+    "client-sessions": "^0.7.0",
     "express": "^4.14.0",
-        "body-parser": "~1.0.1"
+    "express-validator": "^3.0.0"
   },
   "repository": {
     "type": "git",
