--- a/package.json
+++ b/package.json
@@ -13,16 +13,23 @@
     "body-parser": "~1.0.1",
     "client-sessions": "^0.7.0",
     "express": "^4.14.0",
-    "express-validator": "^3.0.0"
+    "express-validator": "^3.0.0",
+    "mysql": "^2.12.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/CSC309-Fall-2016/NoBeginningMiddleEnd.git"
+    "url": "git+https://github.com/CSC309-Fall-2016/NoBeginningMiddleEnd.git"
   },
   "keywords": [
     "node",
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/CSC309-Fall-2016/NoBeginningMiddleEnd/issues"
+  },
+  "homepage": "https://github.com/CSC309-Fall-2016/NoBeginningMiddleEnd#readme",
+  "devDependencies": {},
+  "author": ""
 }
