--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "client-sessions": "^0.7.0",
     "express": "^4.14.0",
     "express-validator": "^3.0.0",
-    "mysql": "^2.12.0"
+    "mysql": "^2.12.0",
+    "node-mysql": "^0.4.2"
   },
   "repository": {
     "type": "git",
